--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% static "images/product" as baseUrl %}
+{% static "assets/images/product" as baseUrl %}
 <!doctype html>
 <html lang="en">
 
@@ -257,7 +257,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="{% static 'assets/images/product/p-1.jpg'%}" alt="Product"></a>
+                                                <a href="#"><img src="{{baseUrl}}/{{furn.img}}" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>
