--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -257,7 +257,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="{{baseUrl}}/{{furn.img}}" alt="Product"></a>
+                                                <a href="#"><img src="{{furn.img.url}}" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>
