started new app for user registration

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -93,8 +93,8 @@
                                 <li class="nav-item">
                                     <a data-scroll-nav="0" href="#blog">Blog</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#contact">Contact</a>
+                                <li >
+                                    <a  href="accounts/registration">Register</a>
                                 </li>
                             </ul> <!-- navbar nav -->
                         </div>
