user registration first steps

--- a/webapp/templates/register.html
+++ b/webapp/templates/register.html
@@ -8,7 +8,7 @@
   <meta name= 'viewport' content='width= device-width ,initial-scale=1'>
 </head>
 <body>
-  <form action='register' method='post'>
+  <form action='registration' method='post'>
     {% csrf_token%}
 
     Enter First Name:<input type='text' name='First Name' placeholder='First Name'><br>
