user registration done

--- a/webapp/templates/register.html
+++ b/webapp/templates/register.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title> Page Title</title>
+  <title> Register</title>
   <meta name= 'viewport' content='width= device-width ,initial-scale=1'>
 </head>
 <body>
@@ -18,7 +18,11 @@
     Enter Password:<input type='text' name='Password'  placeholder='Password'><br>
     Confirm password:<input type='text' name='Password2'  placeholder='Password2'><br>
   <input type='submit'>
-
+<div>
+  {%for message in messages%}
+  <h3>{{message}}</h3>
+  {% endfor %}
+</div>
   </form>
 </body>
 </html>
